[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="lbl_title" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -240.0
margin_bottom = 120.0
text = "godoli"
align = 1
valign = 1

[node name="btn_start" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 140.0
margin_right = -40.0
margin_bottom = 160.0
text = "Start"

[node name="btn_opt" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 180.0
margin_right = -40.0
margin_bottom = 200.0
text = "Opt"

[node name="btn_end" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 220.0
margin_right = -40.0
margin_bottom = 240.0
text = "End"
